20121211
* see `git log' for more recent change log
* created stand-alone version based on libfguid
