@@ -19,14 +19,13 @@
  * along with this software.  If not, see <http://www.gnu.org/licenses/>.
  */
 
-#if !defined( _LIBFCACHE_INTERNAL_CACHE_H )
-#define _LIBFCACHE_INTERNAL_CACHE_H
+#if !defined( _LIBFCACHE_CACHE_H )
+#define _LIBFCACHE_CACHE_H
 
 #include <common.h>
 #include <types.h>
 
 #include "libfcache_cache_value.h"
-#include "libfcache_date_time.h"
 #include "libfcache_extern.h"
 #include "libfcache_libcdata.h"
 #include "libfcache_libcerror.h"
@@ -89,8 +88,15 @@ int libfcache_cache_get_number_of_cache_values(
      int *number_of_values,
      libcerror_error_t **error );
 
-/* Cache value functions
- */
+LIBFCACHE_EXTERN \
+int libfcache_cache_get_value_by_identifier(
+     libfcache_cache_t *cache,
+     int file_index,
+     off64_t offset,
+     int64_t timestamp,
+     libfcache_cache_value_t **cache_value,
+     libcerror_error_t **error );
+
 LIBFCACHE_EXTERN \
 int libfcache_cache_get_value_by_index(
      libfcache_cache_t *cache,
@@ -99,12 +105,25 @@ int libfcache_cache_get_value_by_index(
      libcerror_error_t **error );
 
 LIBFCACHE_EXTERN \
+int libfcache_cache_set_value_by_identifier(
+     libfcache_cache_t *cache,
+     int file_index,
+     off64_t offset,
+     int64_t timestamp,
+     intptr_t *value,
+     int (*value_free_function)(
+            intptr_t **value,
+            libcerror_error_t **error ),
+     uint8_t flags,
+     libcerror_error_t **error );
+
+LIBFCACHE_EXTERN \
 int libfcache_cache_set_value_by_index(
      libfcache_cache_t *cache,
      int cache_entry_index,
      int file_index,
      off64_t offset,
-     time_t timestamp,
+     int64_t timestamp,
      intptr_t *value,
      int (*value_free_function)(
             intptr_t **value,
@@ -116,5 +135,5 @@ int libfcache_cache_set_value_by_index(
 }
 #endif
 
-#endif /* !defined( _LIBFCACHE_INTERNAL_CACHE_H ) */
+#endif /* !defined( _LIBFCACHE_CACHE_H ) */
 
