@@ -24,15 +24,6 @@
 
 #include <common.h>
 
-#if defined( TIME_WITH_SYS_TIME )
-#include <sys/time.h>
-#include <time.h>
-#elif defined( HAVE_SYS_TIME_H )
-#include <sys/time.h>
-#else
-#include <time.h>
-#endif
-
 #include "libfcache_extern.h"
 #include "libfcache_libcerror.h"
 #include "libfcache_types.h"
@@ -43,7 +34,7 @@ extern "C" {
 
 LIBFCACHE_EXTERN \
 int libfcache_date_time_get_timestamp(
-     time_t *timestamp,
+     int64_t *timestamp,
      libcerror_error_t **error );
 
 #if defined( __cplusplus )
